<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="35dp"
    android:layout_marginRight="40dp"
    android:layout_marginBottom="35dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/aaaa"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/ed_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_1st_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/ed_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/enter_2nd_number"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:text="@string/result" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />
    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:padding="10dp"
        android:text="@string/subtract"
        android:textColor="#FFFFFF"
        tools:ignore="DuplicateIds,TextContrastCheck" />


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#009688"
        android:padding="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/devide" />
</LinearLayout>